--- a/app/src/main/res/layout/dialog_main.xml
+++ b/app/src/main/res/layout/dialog_main.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <android.support.constraint.ConstraintLayout
+
+    <FrameLayout
             android:layout_width="500dp"
+            android:layout_gravity="center"
             android:layout_height="500dp">
 
         <Button
                 android:id="@+id/start_activity_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="START ACTIVITY"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:layout_gravity="center"
+                android:text="START ACTIVITY"/>
 
-    </android.support.constraint.ConstraintLayout>
-
+    </FrameLayout>
 </FrameLayout>
 
