--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,10 @@
     <FrameLayout
             android:id="@+id/container_layout"
             android:layout_width="match_parent"
-                 android:layout_height="match_parent">
+            android:background="@android:color/holo_red_light"
+            android:layout_height="match_parent">
 
     </FrameLayout>
+
+
 </android.support.constraint.ConstraintLayout>
